primitives/api/test/tests/ui/invalid_api_version_1.stderr
error: Unexpected `api_version` attribute. The supported format is `api_version(1)`
 --> tests/ui/invalid_api_version_1.rs:2:2
  |
2 |     #[api_version]
  |     ^
